feat: implement form parse logic to request

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -75,9 +75,9 @@
     <h1>🚀 My Web Application Server</h1>
 
     <div class="routes">
-        <a href="/api/hello">/api/hello</a>
-        <a href="/api/ping">/api/ping</a>
-        <a href="/favicon.ico">/favicon.ico</a>
+        <a href="/api/hello">hello</a>
+        <a href="/api/users">users</a>
+        <a href="/signup_form.html">signup</a>
     </div>
 
     <footer>
